<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/mi_map_options"
          android:showAsAction="ifRoom|withText"
          android:icon="@android:drawable/ic_menu_more"
          android:title="@string/mi_map_options">

        <menu>

            <group android:checkableBehavior="all">

                <item android:id="@+id/mi_map_autotrack"
                      android:showAsAction="never"
                      android:title="@string/mi_map_autotrack"/>

                <item android:id="@+id/mi_map_filter_connections"
                      android:showAsAction="never"
                      android:title="@string/mi_map_filter_connections"/>

                <item android:id="@+id/mi_map_filter_range"
                      android:showAsAction="never"
                      android:title="@string/mi_map_filter_range"/>

            </group>

            <item android:id="@+id/mi_map_settings"
                  android:showAsAction="never"
                  android:title="@string/mi_map_settings"/>

        </menu>

    </item>

</menu>
