<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/mi_power_stats"
          android:title="@string/power_title"
          android:icon="@drawable/ic_action_chart"
          android:showAsAction="always"/>

    <item android:id="@+id/car_menu"
          android:showAsAction="ifRoom|withText"
          android:icon="@android:drawable/ic_menu_more"
          android:title="@string/Options">

        <menu>

            <group android:checkableBehavior="all">

                <item
                    android:id="@+id/mi_show_fahrenheit"
                    android:showAsAction="never"
                    android:title="@string/mi_car_details_temp" android:checked="false" android:checkable="true"/>

            </group>

        </menu>
    </item>

</menu>